<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_configuration"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_language"/>

    <LinearLayout
        android:id="@+id/daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/daily_reminder"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_desc"/>

        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_daily"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"/>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/daily"/>

    <LinearLayout
        android:id="@+id/today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/release_today_reminder"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_today_desc"/>

        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_today"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"/>
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/today"/>

</androidx.constraintlayout.widget.ConstraintLayout>