<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    tools:context="com.acun.submission5.details.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ProgressBar
            android:id="@+id/md_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_movie_detail"
            android:layout_width="178dp"
            android:layout_height="267dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_movie_release_detail"
            tools:src="@color/colorAccent"
            android:contentDescription="@string/movie_poster"/>


        <TextView
            android:id="@+id/txt_movie_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fab_fav_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Judul Film" />

        <TextView
            android:id="@+id/txt_movie_release_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_movie_popularity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_movie_title_detail"
            tools:text="tanggal rilis" />

        <TextView
            android:id="@+id/tv_movie_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/popularity"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/txt_movie_release_detail"/>

        <TextView
            android:id="@+id/txt_movie_popularity_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="1h 32m"
            app:layout_constraintStart_toEndOf="@id/img_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_popularity" />

        <TextView
            android:id="@+id/tv_movie_userscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_score"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/txt_movie_popularity_detail"/>

        <TextView
            android:id="@+id/txt_movie_userscore_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="7/10"
            app:layout_constraintStart_toEndOf="@id/img_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_userscore" />

        <TextView
            android:id="@+id/movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/img_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/txt_movie_userscore_detail" />

        <TextView
            android:id="@+id/txt_movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/img_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/movie_language"
            tools:text="overview" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie_detail"/>

        <TextView
            android:id="@+id/txt_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
            tools:text="overview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_red_24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_red_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>